--- a/client/css/style.css
+++ b/client/css/style.css
@@ -3,5 +3,6 @@
 @tailwind utilities;
 
 html {
-    font-family: 'Hind Siliguri', Aril, sans-serif !important;
+    font-family: 'Hind Siliguri', Arial, sans-serif !important;
 }
+
