--- a/client/css/style.css
+++ b/client/css/style.css
@@ -6,3 +6,30 @@ html {
     font-family: 'Hind Siliguri', Arial, sans-serif !important;
 }
 
+
+#popup-container {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent background */
+    backdrop-filter: blur(3px); /* Apply blur to background */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+  }
+
+  #popup {
+    background-color: white;
+    padding: 20px;
+    text-align: center;
+    font-size: 50px;
+    font-weight: bold;
+    border-radius: 10px;
+    padding: 150px;
+    
+  }
+
